Fixed Storybook errors

--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.8",
-    "@storybook/addon-actions": "^6.4.19",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-actions": "^6.4.0-alpha.22",
+    "@storybook/addon-docs": "^6.4.0-alpha.22",
+    "@storybook/addon-essentials": "^6.4.0-alpha.22",
+    "@storybook/addon-links": "^6.4.0-alpha.22",
     "@storybook/addon-svelte-csf": "^1.1.0",
     "@storybook/svelte": "^6.4.19",
     "@sveltejs/adapter-auto": "next",
@@ -31,6 +32,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
+    "storybook-builder-vite": "^0.1.21",
     "svelte": "^3.46.4",
     "svelte-check": "^2.2.6",
     "svelte-loader": "^3.1.2",
