--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
+    "autoprefixer": "^10.4.4",
     "concurrently": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
+    "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.1.0",
     "postcss-nesting": "^10.1.3",
@@ -33,13 +35,10 @@
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-preprocess": "^4.10.4",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
   "type": "module",
-  "dependencies": {
-    "autoprefixer": "^10.4.4",
-    "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.23"
-  }
+  "dependencies": {}
 }
