--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,5 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json"
+	"extends": "./.svelte-kit/tsconfig.json",
+	"include": ["src/**/*.js", "src/**/*.ts", "src/**/*.svelte"],
+	"exclude": ["node_modules/**", "src/**/*.stories.js"]
 }
