--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@typescript-eslint/parser": "^5.10.1",
 		"autoprefixer": "^10.4.4",
 		"babel-loader": "^8.2.3",
+		"concurrently": "^7.1.0",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^3.2.1",
