--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,12 @@
 {
-	"extends": "./.svelte-kit/tsconfig.json"
+	"extends": "./.svelte-kit/tsconfig.json",
+	"compilerOptions": {
+		"paths": {
+			"$lib": ["src/lib"],
+			"$lib/*": ["src/lib/*"],
+			"$components": ["src/lib/components"],
+			"$components/*": ["src/lib/components/*"]
+		}
+	},
+	"exclude": ["./src/stories/**/*", "./src/**/*.stories.js"]
 }
