--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
 	"type": "module",
 	"dependencies": {
 		"@storybook/addon-svelte-csf": "^1.1.0",
-		"cross-env": "^7.0.3"
+		"cross-env": "^7.0.3",
+		"dotenv": "^16.0.1",
+		"jsdom": "^20.0.0"
 	}
 }
