--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@storybook/addon-svelte-csf": "^1.1.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.1",
-		"jsdom": "^20.0.0"
+		"jsdom": "^20.0.0",
+		"canvas": "file:./src/functions/canvas"
 	}
 }
