--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
 	"type": "module",
 	"dependencies": {
 		"@storybook/addon-svelte-csf": "^1.1.0",
+		"canvas": "^2.10.1",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.1",
 		"jsdom": "^20.0.0"
