--- a/package.json
+++ b/package.json
@@ -64,9 +64,8 @@
 	"type": "module",
 	"dependencies": {
 		"@storybook/addon-svelte-csf": "^1.1.0",
-		"canvas": "^2.10.1",
+		"cheerio": "^1.0.0-rc.12",
 		"cross-env": "^7.0.3",
-		"dotenv": "^16.0.1",
-		"jsdom": "^20.0.0"
+		"dotenv": "^16.0.1"
 	}
 }
